feat: Implement database integration and world management enhancements
This commit introduces significant new features and improvements to the WorldManager plugin, focusing on robust database integration for persistent data storage and enhanced world management capabilities.

Key changes include:

- **Database Integration:**
    - Added a comprehensive database management system with support for MySQL and SQLite.
    - Introduced DatabaseConnection, DatabaseFactory, DatabaseManager, MySQLConnection, and SQLiteConnection for flexible database handling.
    - This allows for persistent storage of plugin data, improving reliability and scalability.

- **Enhanced World Management:**
    - Implemented LinkedWorldsManager to manage linked worlds, enabling more complex world interactions and configurations.
    - Introduced PlayerInventoryManager to handle player inventories across different worlds, ensuring a consistent player experience.
    - Added WorldChangeListener to listen for and respond to world change events, facilitating features like inventory management and linked world transitions.

- **Configuration and Core Updates:**
    - Modified WorldManager.java to integrate new database and world management features.
    - Updated WorldsConfig.java to support new configuration options related to linked worlds and database settings.
    - Adjusted config.yml and plugin.yml to reflect the new features and configurations.

- **GUI and Utility Improvements:**
    - Modified GameRuleEditorGUI.java for potential enhancements in game rule management.
    - Updated ItemBuilder.java for improved item creation utility.

- **Build and Project Configuration:**
    - Updated .idea files (dataSources.xml, data_source_mapping.xml, modules/fr.Mathildeuh.WorldManager.main.iml, sqldialects.xml) to support new database configurations and project structure.
    - Modified lt.gradle and uild.gradle to include necessary dependencies and build configurations for database integration.

- 